# api-signature-wasm

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
examples/: index.html
src/: lib.rs  patchouli.rs  updater.rs  utils.rs
