[package]
name = "api-signature-wasm"
version = "1.0.0"
authors = ["Kurisu <makise_kurisuu@outlook.jp>"]
description = "A helper project with wasm-pack."
license = "MIT"
repository = "https://github.com/kurisu994/api-signature-wasm.git"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
debug-log = []

[dependencies]
wasm-bindgen = "^0.2.86"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.63"
wasm-bindgen-futures = "0.4.36"
log = "0.4.17"
console_log = { version = "1.0.0", features = ["color"] }
getrandom = { version = "0.2.9", features = ["js"] }
digest = "0.10.7"
sha3 = "0.10.8"
futures = "0.3.28"
rsa = "0.9.2"
md-5 = "0.10.5"
serde = { version = "1.0.163", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"


[build-dependencies]
serde_json = "1.0.96"

[dependencies.web-sys]
version = "0.3.63"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
[dev-dependencies]
wasm-bindgen-test = "0.3.36"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.profiling.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = true
dwarf-debug-info = false
